--- a/miniprogram/pages/info/info.wxml
+++ b/miniprogram/pages/info/info.wxml
@@ -1,2 +1,3 @@
 <!--pages/info/info.wxml-->
-<text>pages/info/info.wxml</text>
+<import src="../../templates/prebuy/order.wxml" />
+<template is="prebuy" data="{{title,orderlist,totalprice,note,type}}"></template>
