--- a/miniprogram/pages/info/info.wxml
+++ b/miniprogram/pages/info/info.wxml
@@ -1,3 +1,11 @@
 <!--pages/info/info.wxml-->
 <import src="../../templates/prebuy/order.wxml" />
-<template is="prebuy" data="{{title,orderlist,totalprice,note,type}}"></template>
+<import src="../../templates/noInfo/noInfo.wxml" />
+<block wx:if="{{orderlist.length===0}}">
+  <view class='juzhong'>
+    <template is="noInfo" data="{{message:'主人还没有新的预购单哦，赶快去生成吧'}}"></template>
+  </view>
+</block>
+<block wx:if="{{orderlist.length>0}}">
+  <template is="prebuy" data="{{title,orderlist,totalprice,note,type}}"></template>
+</block>
