--- a/miniprogram/pages/me/me.wxml
+++ b/miniprogram/pages/me/me.wxml
@@ -1,25 +1,28 @@
 <!--pages/me/me.wxml-->
 <view class='top'>
-  <image class='headimg' src='/images/watermelon.jpg' mode='aspectFill'></image>
-  <view>小豪</view>
+  <view class='headimgwrap'>
+    <button open-type="getUserInfo" bindgetuserinfo="getUserInfo" wx:if="{{!hasUserLogin}}" class='loginBtn'>登录</button>
+    <image wx:else class='headimg' src='{{userInfo.avatarUrl}}' mode='aspectFill'></image>
+  </view>
+  <view>{{userInfo.nickName}}</view>
   <view class='point'>当前积分：100</view>
 </view>
-<view class='flexwrap oplist firstline' hover-class='hoverclass' hover-start-time='50'>
+<view class='flexwrap oplist firstline' data-type='history' bindtap='enterOpera' hover-class='hoverclass' hover-start-time='50'>
   <view class='left'>历史订单</view>
   <view class='middle'>查看</view>
   <view class='rightTri'></view>
 </view>
-<view class='flexwrap oplist' hover-class='hoverclass' hover-start-time='50'>
-  <view class='left'>积分查阅</view>
+<view class='flexwrap oplist' data-type='shop' bindtap='enterOpera' hover-class='hoverclass' hover-start-time='50'>
+  <view class='left'>积分商城</view>
   <view class='middle'>查看</view>
   <view class='rightTri'></view>
 </view>
-<view class='flexwrap oplist' hover-class='hoverclass' hover-start-time='50'>
+<view class='flexwrap oplist' data-type='phone' bindtap='enterOpera' hover-class='hoverclass' hover-start-time='50'>
   <view class='left'>我的手机号码</view>
   <view class='middle'>查看</view>
   <view class='rightTri'></view>
 </view>
-<view class='flexwrap oplist' hover-class='hoverclass' hover-start-time='50'>
+<view class='flexwrap oplist' data-type='concat' bindtap='enterOpera' hover-class='hoverclass' hover-start-time='50'>
   <view class='left'>联系商家</view>
   <view class='rightTri'></view>
 </view>
