--- a/miniprogram/pages/me/me.wxss
+++ b/miniprogram/pages/me/me.wxss
@@ -11,9 +11,25 @@ page{
   color:white;
   margin-bottom: 30rpx;
 }
-.headimg{
+.headimgwrap{
   width:180rpx;
   height:180rpx;
+  margin: 0 auto;
+  margin-bottom: 15rpx;
+}
+.loginBtn{
+  width:100%;
+  height:100%;
+  border-radius: 50%;
+  border:5rpx solid white;
+  display: flex;
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+}
+.headimg{
+  width:100%;
+  height:100%;
   border-radius: 50%;
   border:5rpx solid white;
 }
