phone page data handle ok and doing index page data handle

--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -51,6 +51,7 @@
   width:100%;
   position:absolute;
   top:50%;
+  left:0;
   transform: translateY(-50%);
   -webkit-transform: translateY(-50%);
 }
