--- a/miniprogram/pages/history/list/list.wxss
+++ b/miniprogram/pages/history/list/list.wxss
@@ -1,4 +1,5 @@
 /* pages/history/list/list.wxss */
+@import '../../../templates/noInfo/noInfo.wxss';
 page{
   padding:20rpx;
   box-sizing: border-box;
