--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,18 +1,39 @@
 <!--pages/index/index.wxml-->
-<view class='iptwrap'>
-  <input class='searchipt' bindinput='handleipt' bindconfirm='searchFn' placeholder="输入水果名称" confirm-type="search" />
-  <icon class='iconsearch' bindtap='searchFn' type="search" size="20" />
-</view>
-<view class='itemwrap flexwrap'>
-  <block wx:for="{{fruitList}}" wx:key="id">
-    <view class='itemlist'>
-      <view class='entercar' data-id="{{item.id}}" bindtap='enterCar' hover-class='hoverclass' hover-stay-time='100'>加入购物车</view>
-      <image class='fruitimg' src='{{item.pic}}' mode='aspectFill'></image>
-      <view class='flexwrap info'>
-        <view class='shenglve nosamll'>{{item.name}}</view>
-        <view class='money nosamll'>￥{{item.price}}</view>
-      </view>
-    </view>
-  </block>
-</view>
-
+<upPullData scrollViewHeight="{{scrollViewHeight}}"
+            loadingType="{{loadType}}"
+            isFinish="{{isFinish}}"
+            showLoading="{{isLoading}}" 
+            lowerThreshold="{{40}}" 
+            bindgetList="getData">
+  <view class='iptwrap'>
+    <input class='searchipt' bindinput='handleipt' bindconfirm='searchFn' placeholder="输入水果名称" confirm-type="search" />
+    <icon class='iconsearch' bindtap='searchFn' type="search" size="20" />
+  </view>
+  <view class='itemwrap flexwrap'>
+    <block wx:if="{{searchfruitList.length===0}}">
+      <block wx:for="{{fruitList}}" wx:key="_id">
+        <view class='itemlist'>
+          <view class='entercar' data-id="{{item._id}}" bindtap='enterCar' hover-class='hoverclass' hover-stay-time='100'>加入购物车</view>
+          <image class='fruitimg' src='{{item.pic}}' mode='aspectFill'></image>
+          <view class='flexwrap info'>
+            <view class='shenglve nosamll'>{{item.name}}</view>
+            <view class='money nosamll'>￥{{item.money}}</view>
+          </view>
+        </view>
+      </block>
+    </block>
+    <block wx:else>
+      <block wx:for="{{searchfruitList}}" wx:key="_id">
+        <view class='itemlist'>
+          <view class='entercar' data-id="{{item._id}}" bindtap='enterCar' hover-class='hoverclass' hover-stay-time='100'>加入购物车</view>
+          <image class='fruitimg' src='{{item.pic}}' mode='aspectFill'></image>
+          <view class='flexwrap info'>
+            <view class='shenglve nosamll'>{{item.name}}</view>
+            <view class='money nosamll'>￥{{item.money}}</view>
+          </view>
+        </view>
+      </block>
+    </block>
+  </view>
+  <zhLoading wx:if="{{isLoading}}">快马加鞭中</zhLoading>
+</upPullData>
