--- a/miniprogram/pages/car/car.wxml
+++ b/miniprogram/pages/car/car.wxml
@@ -1,17 +1,9 @@
 <!--pages/car/car.wxml-->
 <import src="../../templates/noInfo/noInfo.wxml" />
+
 <block wx:if="{{list.length>0}}">
-  <view class='flexwrap foot'>
-    <view class='flexwrap'>
-      <view class='flexwrap aligncenter pl20 mr20' bindtap='allselect'>
-        <icon class='dblock mr20 bordericon flexwrap aligncenter' type="{{allOn?'success':'none'}}" size="20" color="#8BC34A"></icon>
-        全选
-      </view>
-      <view>合计：￥<text>{{totalprice}}</text></view>
-    </view>
-    <view class='orderbtn' bindtap='createmenu' hover-class='hoverclass' hover-stay-time='100'>生成订单</view>
-  </view>
-  <block wx:for="{{list}}" wx:key="id">
+  
+  <block wx:for="{{list}}" wx:key="_id">
     <skipOpera index="{{index}}"
               selectIndex="{{selectIndex}}"
               bindindependenceFn="indepen"
@@ -24,7 +16,7 @@
           <image class='carlistimg' src='{{item.pic}}' mode="aspectFill"></image>
           <view class='itemwrap flexwrap oneline'>
             <view class='iteminfo oneline'>{{item.name}}</view>
-            <view class='iteminfo oneline'>￥{{item.price}}</view>
+            <view class='iteminfo oneline'>￥{{item.money}}</view>
           </view>
           <plusMinus class="plusminus"
                   myCount="{{item.count}}"
@@ -38,6 +30,12 @@
   <view class='notewrap'>
     备注：
     <textarea class='note' placeholder='有其他需求的比如邮递等请写好备注联系方式住址等'>
+      <cover-view class='flexwrap foot aligncenter'>
+        <cover-view class='bordericon coverviewselect' bindtap='allselect'>
+          <!-- <icon class='dblock mr20 bordericon flexwrap aligncenter' type="{{allOn?'success':'none'}}" size="20" color="#8BC34A"></icon> -->
+        </cover-view>
+        <cover-view class='orderbtn' bindtap='createmenu' hover-class='hoverclass' hover-stay-time='100'>生成订单</cover-view>
+      </cover-view>
     </textarea>
   </view>
 </block>
