--- a/miniprogram/pages/car/car.wxss
+++ b/miniprogram/pages/car/car.wxss
@@ -24,11 +24,13 @@ page{
 .orderbtn{
   width:180rpx;
   height:100%;
-  align-items: center;
+  float: right;
+  text-align: center;
   justify-content: center;
-  line-height: initial;
+  line-height: 100rpx;
   background-color: #8BC34A;
   color:white;
+  flex-shrink: 0;
 }
 .hoverclass{
   background-color: rgba(139,195,74,0.5);
@@ -39,10 +41,37 @@ page{
   border-radius: 50%;
   border:1px solid #8BC34A;
   box-sizing: border-box;
+  position:relative;
+  margin-left: 30rpx;
+  flex-shrink: 0;
 }
-
+.jiesuanwrap{
+  width:100%;
+  height:100%;
+  margin: 0 20rpx;
+}
+.quanxuan{
+  width:80rpx;
+  height:100%;
+  line-height: 100rpx;
+  flex-shrink: 0;
+}
 .aligncenter{
   align-items: center;
+}
+.heji{
+  width:100rpx;
+  height:100%;
+  line-height: 100rpx;
+  flex-shrink: 0;
+}
+.totalprice{
+  width:100%;
+  height:100%;
+  line-height: 100rpx;
+  margin-right: 20rpx;
+  font-size: 40rpx;
+  color:red;
 }
 .pl20{
   padding-left: 20rpx;
