--- a/miniprogram/components/skipOpration/skipOpration.wxss
+++ b/miniprogram/components/skipOpration/skipOpration.wxss
@@ -1,11 +1,16 @@
 /* pages/skipdel/skipdel.wxss */
 .skipwrap{
   display: flex;
-  display: -webkit-flex; 
+  display: -webkit-flex;
 }
 .con{
   flex-basis: 100%;
   flex-shrink: 0;
+}
+/* 兼容ios样式的 */
+.iosover{
+  width:100%;
+  overflow: hidden;
 }
 .operaBnt{
   height:100%;
